--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
             <div class="header-buttons">
                 <a href="#" class="login">Login</a>
-                <a href="#" class="join-us">JOIN US <span>&#10132;</span></a>
+                <a href="#" class="join-us">JOIN US <img src="images/arrow.png" class="arrow-icon" alt="Arrow"></a>
             </div>
         </div>
     </header>
@@ -29,43 +29,41 @@
     <section class="hero-section">
         <div class="container hero-container">
             <div class="hero-content">
-                <h1>A Great Place to Receive Care</h1>
-                <p>Medical Recover is most focused in helping you discover your most beautiful smile</p>
+                <h5 class="header-tag">Join Us</h5>
+                <h1 class="headline">A Great Place to Receive Care</h1>
+                <p class="sub-headline">Medical Recover is most focused in helping you discover your most beautiful smile</p>
                 <div class="hero-buttons">
                     <a href="#" class="btn btn-primary">Get Quote Now</a>
                     <a href="#" class="btn btn-secondary">Learn More</a>
                 </div>
             </div>
-            <div class="hero-images">
-                <img src="images/Placeholderplaceholder.png" class="doctor" alt="Medical Professional">
-                <img src="images/Rectangleblob.png" class="blob" alt="Blob Shape">
-                <img src="images/Vectorvectorbig.png" class="vector-big" alt="Vector Shape Big">
-                <img src="images/Vectorvectorsmall.png" class="vector-small" alt="Vector Shape Small">
+            <div class="hero-image">
+                <img src="images/doctor.png" class="doctor" alt="Medical Professional">
             </div>
         </div>
     </section>
 
     <section class="services-section">
-        <div class="container">
+        <div class="container services-container">
             <div class="service-card">
-                <div class="service-icon">&#x2764;</div>
+                <img src="images/heart.png" class="service-icon" alt="Online Appointment">
                 <h3>Online Appointment</h3>
                 <div class="service-line"></div>
                 <p>The gradual accumulation of information about atomic and small-scale behavior...</p>
             </div>
             <div class="service-card">
-                <div class="service-icon">&#x2695;</div>
+                <img src="images/stethoscope.png" class="service-icon" alt="Emergency Case">
                 <h3>Emergency Case</h3>
                 <div class="service-line"></div>
                 <p>The gradual accumulation of information about atomic and small-scale behavior...</p>
             </div>
             <div class="service-card">
-                <div class="service-icon">&#x1F4C8;</div>
+                <img src="images/medicalhistory.png" class="service-icon" alt="Cancer Care">
                 <h3>Cancer Care</h3>
                 <div class="service-line"></div>
                 <p>The gradual accumulation of information about atomic and small-scale behavior...</p>
             </div>
         </div>
-    </section>
+    </section>    
 </body>
 </html>
