Changed indentation, corrected mistakes, simplified code in CSS

--- a/index.html
+++ b/index.html
@@ -1,69 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MedicalRecov</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MedicalRecov</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="logo">MedicalRecov</div>
-            <nav>
-                <ul class="nav-list">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Product</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-            <div class="header-buttons">
-                <a href="#" class="login">Login</a>
-                <a href="#" class="join-us">JOIN US <img src="images/arrow.png" class="arrow-icon" alt="Arrow"></a>
-            </div>
-        </div>
-    </header>
+  <header>
+    <div class="container">
+      <div class="logo">MedicalRecov</div>
+      <nav>
+        <ul class="nav-list">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Product</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Contact</a></li>
+          </ul>
+      </nav>
+      <div class="header-buttons">
+        <a href="#" class="login">Login</a>
+        <a href="#" class="join-us">JOIN US <img src="images/arrow.png" class="arrow-icon" alt="Arrow"></a>
+      </div>
+    </div>
+  </header>
 
-    <section class="hero-section">
-        <div class="container hero-container">
-            <div class="hero-content">
-                <h5 class="header-tag">Join Us</h5>
-                <h1 class="headline">A Great Place to Receive Care</h1>
-                <p class="sub-headline">Medical Recover is most focused in helping you discover your most beautiful smile</p>
-                <div class="hero-buttons">
-                    <a href="#" class="btn btn-primary">Get Quote Now</a>
-                    <a href="#" class="btn btn-secondary">Learn More</a>
-                </div>
-            </div>
-            <div class="hero-image">
-                <img src="images/doctor.png" class="doctor" alt="Medical Professional">
-            </div>
+  <section class="hero-section">
+    <div class="container hero-container">
+      <div class="hero-content">
+        <h5 class="header-tag">Join Us</h5>
+        <h1 class="headline">A Great Place to Receive Care</h1>
+        <p class="sub-headline">Medical Recover is most focused in helping you discover your most beautiful smile</p>
+        <div class="hero-buttons">
+          <a href="#" class="btn btn-primary">Get Quote Now</a>
+          <a href="#" class="btn btn-secondary">Learn More</a>
         </div>
-    </section>
+      </div>
+      <div class="hero-image">
+        <img src="images/doctor.png" class="doctor" alt="Medical Professional">
+      </div>
+    </div>
+  </section>
 
-    <section class="services-section">
-        <div class="container services-container">
-            <div class="service-card">
-                <img src="images/heart.png" class="service-icon" alt="Online Appointment">
-                <h3>Online Appointment</h3>
-                <div class="service-line"></div>
-                <p>The gradual accumulation of information about atomic and small-scale behavior...</p>
-            </div>
-            <div class="service-card">
-                <img src="images/stethoscope.png" class="service-icon" alt="Emergency Case">
-                <h3>Emergency Case</h3>
-                <div class="service-line"></div>
-                <p>The gradual accumulation of information about atomic and small-scale behavior...</p>
-            </div>
-            <div class="service-card">
-                <img src="images/medicalhistory.png" class="service-icon" alt="Cancer Care">
-                <h3>Cancer Care</h3>
-                <div class="service-line"></div>
-                <p>The gradual accumulation of information about atomic and small-scale behavior...</p>
-            </div>
-        </div>
-    </section>    
+  <section class="services-section">
+    <div class="container services-container">
+      <div class="service-card">
+        <img src="images/heart.png" class="service-icon" alt="Online Appointment">
+        <h3>Online Appointment</h3>
+        <div class="service-line"></div>
+        <p>The gradual accumulation of information about atomic and small-scale behavior...</p>
+      </div>
+      <div class="service-card">
+        <img src="images/stethoscope.png" class="service-icon" alt="Emergency Case">
+        <h3>Emergency Case</h3>
+        <div class="service-line"></div>
+        <p>The gradual accumulation of information about atomic and small-scale behavior...</p>
+      </div>
+      <div class="service-card">
+        <img src="images/medical-history.png" class="service-icon" alt="Cancer Care">
+        <h3>Cancer Care</h3>
+        <div class="service-line"></div>
+        <p>The gradual accumulation of information about atomic and small-scale behavior...</p>
+      </div>
+    </div>
+  </section>    
 </body>
 </html>
